objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>CreditAmount__c</fullName>
        <description>The dollar amount of the credit value for this employee, entity, program, and time period.</description>
        <inlineHelpText>The dollar amount of the credit value for this employee, entity, program, and time period.</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditEID__c</fullName>
        <description>The Enterprise ID for this Credit.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Credit.</inlineHelpText>
        <label>Credit EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmploymentPeriodGenerated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period during which this credit is valid. This field value is generated from the Program Qualification.</description>
        <inlineHelpText>The employment period during which this credit is valid. This field value is generated from the Program Qualification.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The end date of the period over which this credit is valid.</description>
        <inlineHelpText>The end date of the period over which this credit is valid.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <description>The full name of the Credit, Employment name Program Category name Program Qualification name StartDate and EndDate.</description>
        <formula>Trim(Left(EmploymentPeriodGenerated__r.Name, 20)) &amp; &apos;_&apos; &amp; Trim(Left(	ProgramCategory__r.Name, 20)) &amp; &apos;_&apos; &amp; Trim(Left(ProgramQualification__r.Name, 20)) &amp; &apos;_&apos; &amp;TEXT(MONTH(StartDate__c)) + &quot;/&quot; + TEXT(DAY(StartDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(StartDate__c)),2) &amp;&apos;_&apos;&amp; 
TEXT(MONTH(EndDate__c)) + &quot;/&quot; +TEXT(DAY(EndDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(EndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The full name of the Credit, Employment name Program Category name Program Qualification name StartDate and EndDate.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program category that this credit is calculated for.</description>
        <inlineHelpText>The program category that this credit is calculated for.</inlineHelpText>
        <label>Program Category</label>
        <referenceTo>ProgramCategory__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <description>The program qualification that this credit is valid under.</description>
        <inlineHelpText>The program qualification that this credit is valid under.</inlineHelpText>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date of the period over which this credit is valid.</description>
        <inlineHelpText>The start date of the period over which this credit is valid.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Credit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CreditAmount__c</columns>
        <columns>CreditEID__c</columns>
        <columns>EmploymentPeriodGenerated__c</columns>
        <columns>EndDate__c</columns>
        <columns>FullNameFormula__c</columns>
        <columns>ProgramCategory__c</columns>
        <columns>ProgramQualification__c</columns>
        <columns>StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>